Fix button and label color contrast (#1750)
Pretty self-explanatory. Don't love the new visual language, but this is the best way to stay consistent within JtD's design language.

Note that this applies to both light and dark schemes, but separately the dark link buttons (without colored backgrounds) rely on the link color, which needs to be fixed.

--- a/_sass/buttons.scss
+++ b/_sass/buttons.scss
@@ -109,11 +109,11 @@
 }
 
 .btn-blue {
-  @include btn-color($white, $blue-000);
+  @include btn-color($white, $blue-200);
 }
 
 .btn-green {
-  @include btn-color($white, $green-100);
+  @include btn-color($white, $green-300);
 }
 
 .btn-reset {
